# simpleflow

./: LICENSE  README.md  pyproject.toml
src/simpleflow/: base.py  workflow.py
