[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleflow"
version = "0.0.1"
authors = [
  { name="Leville Huang", email="leville0914@gmail.com" },
]
description = "A Python package that implements a directed acyclic graph workflow."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LevilleHuang/simpleflow.git"